--- a/README.Rmd
+++ b/README.Rmd
@@ -18,4 +18,5 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-See https://dijkjel.github.io/DIANNmv/ for installation and usage instructions.
+See https://dijkjel.github.io/DIANNmv/ ('Get Started tab at top)
+for installation and usage instructions.
